--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <style>
       /* --------------------------------------------
       ################################################
-      # Tools For Mikrotik By BuanaNETPBun.Github.io/
+      # Tools For Mikrotik By BuanaNETPBun.Github.io
       # Designer  : Agus Ramadhani / Buananet.com/
       # Github    : https://buananetpbun.github.io/
       # Site      : https://www.o-om.com/
