--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <div class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
         </div>
         <div style="float:left;margin-top:8px">    
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+          <img alt="Hits" src="https://hits.sh/buananet.com.svg?extraCount=0"/>
         </div>
         <script async src="https://cse.google.com/cse.js?cx=751bf7c3dc13f7e72"></script>
         <div class="google-search">
