--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <ul>
           <li><a href="https://buananetpbun.github.io">HOME</a></li>
           <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
-          <li><a href="javascript:callmodal()">DONATE</a></li>
+          <li><a href="https://buananet.com/login/#sign-in">SUBSCRIBE</a></li>
           <li><a target="_blank" href="https://fb.me/buananetmikrotik/">CONTACT</a></li>
         </ul>
         <div class="show-login-menu" id="show-login-menu">
