--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <li><a href="https://buananetpbun.github.io">HOME</a></li>
           <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
           <li><a href="https://buananet.com/login/#sign-in">SUBSCRIBE</a></li>
-          <li><a target="_blank" href="https://fb.me/buananetmikrotik/">CONTACT</a></li>
+          <li><a target="_blank" href="https://buananet.com/contact.html">CONTACT</a></li>
         </ul>
         <div class="show-login-menu" id="show-login-menu">
           <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:14px; margin-left:12px !important" onclick="window.location.href = 'http://buananet.com/login/#sign-in'">Login</button>
@@ -448,7 +448,7 @@
           </div>
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
           <div style="margin-top:0px; color:#777; font-size:11px">
-            Project by <a target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a target="_blank" href="https://buananet.com/">MikroTik Generator Tools</a> P.Bun 74112, INDONESIA
+            Project by <a target="_blank" href="https://github.com/buananetpbun">@buananetpbun</a> site <a target="_blank" href="https://buananet.com/">MikroTik Generator Tools</a> P.Bun 74112, INDONESIA
           </div>
         </div>
       </div>
