--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@
         </div>
         <ul>
           <li><a href="https://buananetpbun.github.io">HOME</a></li>
-          <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
-          <li><a href="https://buananet.com/login/#sign-in">SUBSCRIBE</a></li>
-          <li><a target="_blank" href="https://buananet.com/contact.html">CONTACT</a></li>
+          <li><a href="https://buananet.com/price.html">PRICE</a></li>
+          <li><a href="https://buananet.com/updates.html">UPDATES</a></li>
+          <li><a href="https://buananet.com/docs.html">DOCS</a></li>
+          <li><a href="https://buananet.com/contact.html">CONTACT</a></li>
         </ul>
         <div class="show-login-menu" id="show-login-menu">
           <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:14px; margin-left:12px !important" onclick="window.location.href = 'http://buananet.com/login/#sign-in'">Login</button>
