--- a/index.html
+++ b/index.html
@@ -414,7 +414,18 @@
             <p><a target="_blank" rel="nofollow"  href="https://github.com/buananetpbun/Branding-Maker_Mikrotik">Branding Maker Mikrotik</a></p>
           </div>
         </div>
-		<div syl>
+        <h2>MIKROTIK TEMPLATE LOGIN HOTSPOT DEFAULT</h2>
+        <div class="row">
+          <div class="column">
+            <p><a target="_blank" rel="nofollow"  href="https://github.com/buananetpbun/Mikrotik-Login-Template-Hotspot-v6-and-v7/tree/main/mikrotik-hotspot-master-v6-old">Login Hotspot Default v6 (Old)</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://github.com/buananetpbun/Mikrotik-Login-Template-Hotspot-v6-and-v7/tree/main/mikrotik-hotspot-master-v6-or-v7-new">Login Hotspot Default v6 - v7 (New)</a></p>
+          </div>
+          <div class="column">
+			<p><a target="_blank" rel="nofollow"  href="https://laksa19.github.io/?new-hotspot">Login Hotspot Default v7 Customize</a></p>		  
+          </div>
+        </div>		
+		<div>		
+		<div>
         <h2>MIKROTIK RADIUS BILLING HOTSPOT OR PPPOE</h2>
         <div class="row">
           <div class="column">
