--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ ROUTER-OS OTHER TOOLS</span></div>
         <div class="row">
           <div class="column">
-            <p><a target="_blank"  href="./pcc-calculation.html">Load Balancing PCC Calculation</a><img alt="member-only" class="member-only" src="./img/user.png"></span></p>
-            <p><a target="_blank"  href="./mikrotik-calculator-ip.html">Mikrotik IP Address Calculator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananet.com/pcc-calculation.html">Load Balancing PCC Calculation</a><img alt="member-only" class="member-only" src="./img/user.png"></span></p>
+            <p><a target="_blank"  href="https://buananet.com/mikrotik-calculator-ip.html">Mikrotik IP Address Calculator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="./mirkotik-indonesia-timezone.html">Indonesia Time Zone NTP/SNTP Client</a><img alt="member-only" class="member-only" src="./img/user.png"></p>	  
-            <p><a target="_blank"  href="./wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a target="_blank"  href="https://buananet.com/mirkotik-indonesia-timezone.html">Indonesia Time Zone NTP/SNTP Client</a><img alt="member-only" class="member-only" src="./img/user.png"></p>	  
+            <p><a target="_blank"  href="https://buananet.com/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
         </div> 
         <h2>MIKROTIK TOOLS OFFICIAL FOR WINDOWS </h2>
